--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -22,23 +22,40 @@
 			<p><span th:text="${evento.data}"></span></p>
 			<p><span th:text="${evento.horario}"></span></p>
 		</div>
+		
+		<form method="POST" class="container">
+			Nome:<input type="text" value="" name="nome" />
+			RG:<input type="text" value="" name="rg" />
+			<button class="waves-effect waves-light btn" type="submit">Adicionar</button>
+		</form>
+		
+		<th:block th:include="mensagemValidacao"></th:block>
 	
 	</div>
 	
-	<form method="POST">
-		Nome:<input type="text" value="" name="nome" />
-		RG:<input type="text" value="" name="rg" />
-		<button class="waves-effect waves-light btn" type="submit">Adicionar</button>
-	</form>
+	
 	
 	<h5>Lista Convidados</h5>
+
 	
-	<div class="container" th:each="convidado : ${convidados}">
-		<div class="row">
-			<p>Nome: <span th:text="${convidado.nome}"></span></p>
-			<p>RG: <span th:text="${convidado.rg}"></span></p>
-		</div>
-	</div>
+	<table class="container">
+		<thead>
+			<tr>
+				<th>Nome</th>
+				<th>RG</th>
+				<th>Deletar</th>
+			</tr>
+		</thead>
+		
+		<tbody>
+		
+		<tr th:each="convidado : ${convidados}">
+			<td><span th:text="${convidado.nome}"></span></td>
+			<td><span th:text="${convidado.rg}"></span></td>
+			<td><a class="waves-effect waves-light " th:href="${(#mvc.url('EC#deletarConvidado').arg(0, convidado.rg)).build()}"><i class="material-icons left">delete</i></a></td>
+		</tr>
+		</tbody>
+	</table>
 	
 	<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
