--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 	<meta charset="UTF-8">
 	<title>Cadastrar</title>
@@ -19,6 +19,8 @@
 	
 	<button type="submit" class="waves-effect waves-light btn">Salvar</button>
 </form>
+
+<th:block th:include="mensagemValidacao"></th:block>
 
 <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 
