--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,6 +21,7 @@
 				<th>Local</th>
 				<th>Data</th>
 				<th>Horário</th>
+				<th>Deletar</th>
 			</tr>
 		</thead>
 		
@@ -31,6 +32,7 @@
 			<td><span th:text="${evento.local}"></span></td>
 			<td><span th:text="${evento.data}"></span></td>
 			<td><span th:text="${evento.horario}"></span></td>
+			<td><a class="waves-effect waves-light " th:href="${(#mvc.url('EC#deletarEvento').arg(0, evento.codigo)).build()}"><i class="material-icons left">delete</i></a></td>
 		</tr>
 		</tbody>
 	</table>
